--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,12 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
+.DS_Store
+Thumbs.db
+db.json
+*.log
+node_modules/
+public/
+.deploy*/
+
 # End of https://www.toptal.com/developers/gitignore/api/macos
